feat: better use of string methods (isBlank)